# phd_test_apps

./: .gitignore  .gitmodules  README.md
diveev/NOP_clean/: NOP1.lpi  NOP1.lpr  NOP1.lps  NOP1.pas  calc3.pas  obstacles.pas  unit1.lfm  unit1.pas  unit10.lfm  unit10.pas  unit11.lfm  unit11.pas  unit12.lfm  unit12.pas  unit13.lfm  unit13.pas  unit14.lfm  unit14.pas  unit15.lfm  unit15.pas  unit2.lfm  unit2.pas  unit3.lfm  unit3.pas  unit4.lfm  unit4.pas  unit5.lfm  unit5.pas  unit6.lfm  unit6.pas  unit7.lfm  unit7.pas  unit8.lfm  unit8.pas  unit9.lfm  unit9.pas  unitObstacle.pas  unitadaptobject.pas  unitbvgpobject.pas
diveev/data/: q_461.txt
diveev/nop_simple_test/: NOPSimpleTest.lpi  NOPSimpleTest.pas  NOPSimpleTestHeader.pas  NOPSimpleUnitTest.lpi  NOPSimpleUnitTest.pas  NOPSimpleUnitTestHeader.pas  calc3.pas  project1.lpi  project1.lpr  unit1.lfm  unit1.pas  unit2.lfm  unit2.pas  unit3.lfm  unit3.pas
diveev/unit_test/: README.md  TGANOPClass.pas  TModelClass.pas  TNetOperClass.pas  TNetOperTest.lpi  TNetOperTest.pas  TNetOperTestHeader.pas  TUserClass.pas  UnitTest.lpi  UnitTest.lps  UnitTest.pas  UnitTestHeader.pas  Unit_test.lps  unitadaptobject.pas  unitbvgpobject.pas
nop_cpp/: CMakeLists.txt  README.md
nop_cpp/app/: test_app.cpp
nop_cpp/include/: baseFunctions.hpp  model.hpp  nop_class.hpp  nop_controller.h
nop_cpp/lib/: baseFunctions.cpp  controller.cpp  model.cpp  nop.cpp  nop_class.cpp  nop_controller.cpp  runner.cpp
nop_cpp/lib/include/: baseFunctions.hpp  controller.hpp  model.hpp  nop.hpp  runner.hpp
nop_cpp/test/: CMakeLists.txt  controller_test.cpp  model_test.cpp  nop_class_test.cpp  nop_controller_test.cpp  nop_simple_test.cpp  nop_test.cpp  runner_test.cpp
shuk/: UnitAdaptObject.py  calc3.py  mycalc3.py
